<resources>
    <string name="app_name">天气预报</string>
    <string name="title_city_manager">城市管理</string>
    <string name="pk_weather">天气</string>
    <string name="current_location">当前地址</string>
    <string name="update">更新</string>
    <string name="todo">TODO</string>
    <string name="city_name">北  京</string>
    <string name="publish_date">今天18:25分发布</string>
    <string name="humidity">湿度57%</string>
    <string name="degree">温度5 °C</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pollution">重 度 污 染</string>
    <string name="_100">100</string>
    <string name="week_days">今天 星期三</string>
    <string name="degree_range">-2°C ~ 7°C</string>
    <string name="fengxiang">东北风</string>
    <string name="wind">微风</string>
    <string name="day">白天</string>
    <string name="night">晚上</string>
    <string name="place_holder">这是一个临时页面</string>
    <string name="current_city">当前城市 北京</string>
    <string name="input">请输入城市名称或拼音</string>
    <string name="cur_pos">当前位置</string>
</resources>
