<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ff0000">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/base_action_bar_back_normal"
            android:contentDescription="@string/title_city_manager"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A71717"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/current_city"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/place_holder"/>
</LinearLayout>