<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/biz_plugin_weather_qing"
        android:contentDescription="@string/todo" 
        android:layout_margin="15dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/week_days"
            android:textColor="#ffffff"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/degree_range"
            android:textColor="#ffffff"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/weather"
            android:textColor="#ffffff"
            android:gravity="start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/wind"
            android:textColor="#ffffff"
            android:gravity="start"/>
    </LinearLayout>

</LinearLayout>