<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_margin="1dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_date"
        android:textSize="13sp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/degree"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>