<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="100dp"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/pm2_5"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:gravity="center"/>

            <TextView
                android:id="@+id/pm25"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="#ffffff"
                android:text="@string/_100"
                android:textSize="25sp"
                android:textAlignment="center"
                android:gravity="center"/>

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/biz_plugin_weather_0_50"
            android:contentDescription="@string/todo" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/quality"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/pollution"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</LinearLayout>