<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ff0000"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:contentDescription="@string/title_city_manager"
            android:src="@drawable/base_action_bar_back_normal" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A71717"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/cur_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/current_city"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </LinearLayout>

    <SearchView
        android:id="@+id/search_city"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_white_round_bg"
        android:hint="@string/input"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f1f6f9">

        <!--    <include layout="@layout/layout_head" />-->


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <select_city.view.QuickIndexView
            android:id="@+id/quickIndexView"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp" />
    </RelativeLayout>
</LinearLayout>

